--- a/templates/view/partials/base.html
+++ b/templates/view/partials/base.html
@@ -21,7 +21,7 @@
 
         {% include 'partials/header.html' %}
 
-        <main class="container pb-4">
+        <main class="container pt-3 pb-4">
             {% block content %} {% endblock %}
         </main>
 
