--- a/templates/view/transaction-form.html
+++ b/templates/view/transaction-form.html
@@ -4,13 +4,13 @@
 
 <div class="container">
 
-    <h4 class="text-center my-2 fw-bolder">
+    <h2 class="fw-bolder text-start mb-4 custom-color-blue">
         {% if not formData.id %}
             Cadastro de Receitas e Despesas
         {% else %}
             Edição da {{ formData.typeOption }} da transacão {{ formData.descryption }}
         {% endif %}
-    </h4>
+    </h2>
     <div class="row justify-content-center">
         <div class="col-sm-9 col-12">
             {{ flash() }}
@@ -31,7 +31,7 @@
                 <select class="form-select" aria-label="Default select example" name="pessoa" id="pessoaSelect">
                     <option selected disabled>-- Selecione a pessoa aqui --</option>
                     {% for person in persons %}
-                    <option age="{{person.age}}" value="{{ person.id }}" {% if person.id == formData.pessoa %}selected{% endif %}>
+                    <option person-name="{{person.name}}" age="{{person.age}}" value="{{ person.id }}" {% if person.id == formData.pessoa %}selected{% endif %}>
                         {{ person.name }} {{ person.age < 18 ? ' (menor de idade)' : '' }}
                     </option>
                     {% endfor %}
@@ -135,7 +135,13 @@
                         <td class="col-sm text-center">{{transaction.id}}</td>
                         <td class="col-sm ps-5">{{transaction.expense_name}}</td>
                         <td class="col-sm text-center">{{transaction.cost_type}}</td>
-                        <td class="col-sm text-center">{{ 'R$ ' ~ transaction.cost|replace({',': '.'})|number_format(2, ',', '.') }}</td>
+
+                        {% if transaction.cost_type == 'Despesa' %}
+                        <td class="col-sm text-center text-danger fw-medium">{{ '( R$ ' ~ transaction.cost|number_format(2, ',', '.') ~ ' )' }}
+                            {% else %}
+                        <td class="col-sm text-center">{{ 'R$ ' ~ transaction.cost|replace({',': '.'})|number_format(2, ',', '.') }}
+                            {% endif %}
+                        </td>
 
 
                         {% set found = false %}
