--- a/templates/view/partials/footer.html
+++ b/templates/view/partials/footer.html
@@ -3,10 +3,10 @@
     <div class="container">
 
         <div class="d-block d-md-none">
-            <div class="container text-center m-3">
+            <div class="container my-3 text-center">
                 <span class="">
                     &copy; 2025 -
-                    <a href="https://github.com/gpereira86" target="_blank" class="">
+                    <a href="https://github.com/gpereira86" target="_blank">
                         <i class="fa-brands fa-github"></i>&nbsp; Glauco Pereira
                     </a>
                 </span>
